# molexp

./: .gitignore  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  Sample Task.yaml  mkdocs.yml  package-lock.json  package.json  project.json  pyproject.toml  remote_test.yaml  setup.py  shell_test.yaml  test.ipynb  test_exp_experiment.yaml  test_indexed_folders.py  workspace.json  zensical.toml
.agent/: README.md  notes.md  open-questions.md  project-map.md
.claude/agents/: molexp-architect.md  molexp-designer.md  molexp-documenter.md  molexp-integrity.md  molexp-optimizer.md  molexp-security.md  molexp-tester.md
.claude/notes/: README.md  architecture.md  harness-goal.md  notes.md  open-questions.md
.claude/specs/: INDEX.md  flowgram-workflow-canvas-03-read-canvas.acceptance.md  flowgram-workflow-canvas-03-read-canvas.md  flowgram-workflow-canvas-04-edit-writeback.acceptance.md  flowgram-workflow-canvas-04-edit-writeback.md  workflow-refactor-01-codec-fold.acceptance.md  workflow-refactor-01-codec-fold.md  workflow-refactor-02-merge-build-compile.acceptance.md  workflow-refactor-02-merge-build-compile.md  workflow-refactor-03-pg-node-lowering.acceptance.md  workflow-refactor-03-pg-node-lowering.md  workflow-refactor-04-runtime-flat-cache.acceptance.md  workflow-refactor-04-runtime-flat-cache.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
assets/6a430641-9c13-4d4c-99f1-b34ee385d16f/: meta.yaml
benches/: README.md  __init__.py  bench_cache_put.py  bench_catalog_register.py  bench_provenance_lineage.py
catalog/: index.sqlite
docs/: README.md  architecture.md  index.md  plugins.md  quickstart.md  server-lifecycle-zh.md  server-lifecycle.md  task-protocol.md  webui.md  workflow_serialization.md
docs/actors/: compilation.md  config-as-state.md  examples.md  hot-reconfiguration.md  hybrid-execution.md  message-passing.md  migration.md  overview.md
docs/api/: execution.md  experiments.md  parameters.md  pool_graph.md  tasks.md
docs/architecture/: agent.md  experiment-runner-boundary.md  index.md  plan-mode.md  workflow-layer.md
docs/assets/: management.md
docs/concept/: agent.md  assets-and-reproducibility.md  index.md  plugins.md  workflow.md  workspace.md
docs/control-flow/: conditional.md  index.md  loops.md  map-reduce.md  parallel.md
docs/core/: compiler.md  context.md  engine.md  subworkflow.md  task.md
docs/developer/: architecture-convergence-spec-zh.md  architecture-convergence-work-breakdown-zh.md  pydanticai-graph-integration-proposal-zh.md
docs/development/: architecture.md  compiler.md  contributing.md  index.md  ir-and-compiler.md  task-protocols.md  testing.md
docs/examples/: advanced_workflows.md  basic_usage.md  experiment_management.md  hamilton_integration.md  parameter_exploration.md  shell_tasks.md
docs/get-started/: overview.md  quick-start.md
docs/getting-started/: agent-end-to-end.md  cli-and-profiles.md  first-workflow.md  index.md  overview.md  quick-start.md  start-from-ui.md  tracked-runs.md
docs/getting_started/: concepts.md  index.md  installation.md  quick_start.md
docs/guide/: actors.md  assets.md  control-flow.md  index.md  ir-export.md  molq.md  plan-mode.md  run-profiles.md  server-lifecycle.md  subworkflows.md  task-and-actor.md  task-context.md  workflow-persistence.md  workflow-runtime.md  workspace-api.md  workspace-architecture.md
docs/spec/: fullscreen-monitor.md  molcfg-profiles.md  unified-pydantic-graph-dispatch.md
docs/tutorial/: quick-start.md
docs/user_guide/: experiments.md  parameters.md  tasks.md  workflows.md
docs/workspace/: api.md  architecture.md
examples/: 01_basic_usage.py  02_experiment_management.py  03_shell_tasks.py  04_parameter_exploration.py  05_advanced_workflow.py  06_hamilton_integration.py  07_advanced_shell_tasks.py  README.md
examples/agent/: author_mode.py  chat_loop.py  chat_mode.py  interactive_loop.py  plan_mode.py  plan_mode_interactive.py
examples/getting_started/: 01_quick_start.py  02_first_workflow.py  03_tracked_run.py
examples/harness/: __init__.py  experiment_pipeline.py  full_pipeline.py  plan_mode_live.py  plan_mode_offline.py
examples/operations/: molq.py  scheduler_molq.py  server_lifecycle.py
examples/workflow/: branch_and_loop.py  control_flow.py  subworkflows.py  task_and_actor.py  task_context.py  workflow_runtime.py
examples/workspace/: assets.py  workflow_persistence.py  workspace_api.py  workspace_architecture.py
projects/demo/: experiment.json  project.json
projects/playground/: project.yaml
projects/tmp-molexp-proj/: project.yaml
projects/workspaces-molexp/: project.yaml
scripts/: audit_agent_pydantic_parallel.py  dump_openapi.py
src/molexp/: assets.py  (+36 more)
src/molexp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
taskflow/: README.md  pyproject.toml
tests/: conftest.py  test_api_schema.py  test_asset_library.py  test_assets.py  test_atomicio.py  test_build_backend.py  test_checkpoint.py  test_cli_cancel.py  test_cli_mcp.py  test_cli_molq.py  test_cli_run.py  test_cli_run_jobs.py  test_compiler.py  test_compute_integration.py  test_control_flow.py  test_dispatch.py  test_dsl.py  test_engine.py  test_entry.py  test_examples_smoke.py  test_executor.py  test_experiment.py  test_experiment_spec.py  test_git_operations.py  test_git_worktree.py  test_graph.py  test_id_utils.py  test_ids.py  test_integration.py  test_integration_research.py  test_ir_implementation.py  test_json_ir_manual.py  test_lazy_imports.py  test_logger.py  test_mcp_capabilities.py  test_models.py  test_param.py  test_path.py  test_pool.py  test_project.py  (+11 more)
tests/test_plugins/_fixtures/example_plugin/: __init__.py  pyproject.toml
tests/test_plugins/_fixtures/example_plugin/ui_dist/: index.js  manifest.json
ui/: README.md  biome.json  components.json  package-lock.json  package.json  rsbuild.config.ts  rstest.config.ts  tsconfig.json  vitest.config.ts
vsc-ext/: .vscodeignore  README.md  package.json  tsconfig.json
vscode-ext/: build.mjs
(+1680 files in other folders)
