[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molexp"
version = "0.2.0"
description = "Workflow and agent platform for research experiment management"
authors = [{name = "molcrafts"}]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.10",
    "pydantic-graph>=1.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=14.3.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "molcrafts-mollog>=1.0.0",
    "molcrafts-molcfg>=1.2.0",
]

[project.optional-dependencies]
agent = ["pydantic-ai>=1.0"]
remote = []                          # molq when published
all = ["molexp[agent,remote]"]
dev = [
    "molexp[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "psutil>=5.9.0",
]

[project.scripts]
molexp = "molexp.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.hatch.build]
# Ship the built frontend bundle inside the wheel — populated by
# `npm run build:ui` before `python -m build --wheel`.
artifacts = [
    "src/molexp/_webapp/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/molexp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
