[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molexp"
version = "0.0.1"
description = "Workflow and agent platform for research experiment management"
authors = [{name = "molcrafts"}]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.10",
    "pydantic-graph>=1.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=14.3.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "molcrafts-mollog>=1.0.0",
    "molcrafts-molcfg>=1.2.0",
    # molq powers both ``--local`` (subprocess via the ``local`` scheduler)
    # and cluster backends (slurm/pbs/lsf), so it is required at runtime —
    # not optional.  Unifying dispatch under molq lets ``molexp watch`` /
    # ``molexp explore`` share one job-state model across backends.
    "molcrafts-molq>=0.2.0",
]

[project.optional-dependencies]
agent = ["pydantic-ai>=1.0"]
all = ["molexp[agent]"]
dev = [
    "molexp[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "httpx>=0.24",
    "psutil>=5.9.0",
]

[project.scripts]
molexp = "molexp.cli:app"

[tool.pytest.ini_options]
markers = [
    "unit: fast standalone tests for a single function/class",
    "integration: tests that exercise multi-component flows (FastAPI, workspace)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.hatch.build]
# Ship the built frontend bundle inside the wheel — populated by
# `npm run build` (in ui/) before `python -m build --wheel`.
artifacts = [
    "src/molexp/dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/molexp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
