[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setup"
backend-path = ["."]

[project]
name = "molexp"
version = "0.0.1"
description = "Workflow and agent platform for research experiment management"
authors = [{name = "molcrafts"}]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.10",
    "pydantic-graph>=1.105",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=14.3.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "molcrafts-mollog>=1.0.0",
    "molcrafts-molcfg>=1.2.0",
    "molcrafts-molq>=0.2.0",
]

[project.optional-dependencies]
agent = ["pydantic-ai>=1.0"]
tensorboard = ["tensorboard>=2.15"]
all = ["molexp[agent,tensorboard]"]
dev = [
    "molexp[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "httpx>=0.24",
    "psutil>=5.9.0",
]
docs = [
    "zensical"
]

[tool.uv.sources]
molcrafts-mollog = { path = "../mollog", editable = true }
molcrafts-molcfg = { path = "../molcfg", editable = true }
molcrafts-molq = { path = "../molq", editable = true }

[project.scripts]
molexp = "molexp.cli:app"

[tool.pytest.ini_options]
markers = [
    "unit: fast standalone tests for a single function/class",
    "integration: tests that exercise multi-component flows (FastAPI, workspace)",
    "perf: event-loop responsiveness / performance regression guards (stdlib timing)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "src/molexp/dist",
    "ui",
    "build",
    "dist",
    "site",
    "node_modules",
    ".venv",
]

[tool.ruff.lint]
# Strict ruleset for the molexp Python codebase.
#   E, W, F, I  — pycodestyle / pyflakes / isort baseline
#   B           — flake8-bugbear
#   UP          — pyupgrade (modern py312 syntax)
#   SIM         — flake8-simplify
#   RUF         — ruff-specific rules
#   ANN         — flake8-annotations (drives ANN401: ban `Any`)
#   ARG         — unused-argument
#   PTH         — flake8-use-pathlib
#   TID         — flake8-tidy-imports
#   PIE         — flake8-pie
#   RET         — flake8-return
#   C4          — flake8-comprehensions
select = [
    "E", "W", "F", "I",
    "B", "UP", "SIM", "RUF",
    "ANN", "ARG", "PTH",
    "PIE", "RET", "C4",
]
ignore = [
    "E501",     # line-length — handled by ruff-format, not the linter
    "B008",     # function call in default arg — pydantic-ai / typer rely on this
    "SIM108",   # ternary noise — judgement call, often less readable
    "RET504",   # unnecessary assignment before return — local naming aids debugging
]

[tool.ruff.lint.per-file-ignores]
# Tests can use `Any` in fixtures/conftest where it's genuinely opaque,
# and may freely declare untyped fixture functions.
"tests/**" = ["ANN001", "ANN201", "ANN202", "ANN204", "ANN401", "ARG001", "ARG002"]
# Examples are user-facing tutorials — annotation gaps are pedagogically OK.
"examples/**" = ["ANN001", "ANN201", "ANN202", "ANN204", "ANN401", "ARG001", "ARG002"]
# `__init__.py` re-export modules don't need annotations on `__all__` etc.
"**/__init__.py" = ["F401"]
# CLI entry-points use typer-style decorators with implicit return types.
"src/molexp/cli/**" = ["ANN201", "ANN202"]

[tool.ruff.lint.flake8-annotations]
# ANN401 (`Any` is not allowed) is in the default `ANN` selection.
# These options sharpen its enforcement.
allow-star-arg-any = false
suppress-dummy-args = true

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

# ─── ty (type checker) ───────────────────────────────────────────────────────
[tool.ty.environment]
# Pin resolution to the project venv: a monorepo shell often exports
# VIRTUAL_ENV=<root>/.venv, and without this pin ty resolves third-party
# imports against the wrong environment (pydantic_ai etc. show up as
# unresolved-import even though `uv run` imports them fine).
python = "./.venv"

[tool.ty.src]
include = ["src", "tests", "examples"]
exclude = [
    "src/molexp/dist",
    "ui",
    "build",
    "dist",
    "site",
    "node_modules",
    ".venv",
    "**/__pycache__",
]

[tool.ty.rules]
# ty is still alpha; we keep the default rule set and treat all diagnostics
# as errors. Concrete `Any` enforcement happens through ruff ANN401.
unresolved-import = "error"
invalid-assignment = "error"
invalid-type-form = "error"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
molexp = [
    "openapi.json",
    "dist/**",
]
